데이터, 쿼리 구조 수정 및 트랜잭션 프로세서 작업 중